packages/libs/error-stack/tests/snapshots/test_debug__hook_combine@backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u16 (other)
| @ tests/test_debug.rs:293:10
|-> u64
|   \-@ tests/test_debug.rs:292:10
|-> u32
|   \-@ tests/test_debug.rs:291:10
|-> Root error
|   \-@ tests/common.rs:140:5
\-> backtrace with 35 frames (1)
    \-@ tests/common.rs:140:5

