packages/libs/error-stack/tests/snapshots/test_debug__hook_combine@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u16 (other)
│ 📌 tests/test_debug.rs:282:10
├─▶ u64
│   ╰ 📌 tests/test_debug.rs:281:10
├─▶ u32
│   ╰ 📌 tests/test_debug.rs:280:10
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
├─▶ spantrace with 2 frames (1)
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with 41 frames (1)
    ╰ 📌 tests/common.rs:140:5

