packages/libs/error-stack/tests/snapshots/test_debug__hook_context@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 32bit integer (No. 0)
│ 📌 tests/test_debug.rs:256:34
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
├─▶ spantrace with 2 frames (1)
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with 41 frames (1)
    ╰ 📌 tests/common.rs:140:5

