packages/libs/error-stack/tests/snapshots/test_debug__hook_decr@backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

-1
│ 📌 tests/test_debug.rs:341:10
├─▶ -2
│   ╰ 📌 tests/test_debug.rs:340:10
├─▶ -3
│   ╰ 📌 tests/test_debug.rs:339:10
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with 35 frames (1)
    ╰ 📌 tests/common.rs:140:5

