packages/libs/error-stack/tests/snapshots/test_debug__hook_decr@spantrace-backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

-1
| @ tests/test_debug.rs:328:10
|-> -2
|   > @ tests/test_debug.rs:327:10
|-> -3
|   > @ tests/test_debug.rs:326:10
|-> Root error
|   > @ tests/common.rs:140:5
|-> spantrace with 2 frames (1)
|   > @ tests/common.rs:140:5
\-> backtrace with 41 frames (1)
    > @ tests/common.rs:140:5

